# laravel

./: .env.example  composer.json  docker-compose.yml  package-lock.json  package.json  vite.config.js
.docker/nginx/: default.conf
.docker/php/: Dockerfile  php.ini
app/Console/Commands/: BotCommand.php  PythonVectorStoreCommand.php
app/Http/Controllers/: ChatBotController.php  VectorStoreController.php
app/Jobs/: BotJob.php  CrawlUrlJob.php
app/Models/: Bot.php  BotUrl.php
bootstrap/cache/: packages.php  services.php
database/migrations/: 2024_05_04_042532_create_bots_table.php  2024_05_20_090743_create_bot_urls_table.php
frontend/: .env.development  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/contexts/: auth.tsx
frontend/src/layouts/: default.tsx
frontend/src/pages/: home.tsx
kizi/shopify/: composer.json
kizi/shopify/src/: ShopifyProvider.php  Util.php
kizi/shopify/src/Http/Controllers/: ApiController.php
public/scripts/: chat.js
python/: pyproject.toml
python/flows/push-to-vector-store/: flow.dag.yaml
python/src/: __init__.py  chat.py  test.py
resources/css/: app.css
resources/views/: app.blade.php
resources/views/includes/: head.blade.php
resources/views/layouts/: default.blade.php
resources/views/pages/: chatbot.blade.php  widget.blade.php
resources/views/pages/vector_store/: create.blade.php  index.blade.php  update.blade.php
resources/views/pages/vector_store/includes/: form.blade.php
routes/: api.php  web.php
